# Book-Store

./: README.md
backend/: pyproject.toml  requirements.txt
backend/src/backend/: main.py
backend/src/backend/config/: db.py
backend/src/backend/models/: book.py  user.py
backend/src/backend/routers/: book.py  user.py
backend/src/backend/schemas/: book.py  user.py
backend/src/backend/services/: book_service.py  user_service.py
backend/src/backend/utils/: auth.py  jwt_handler.py  password_hasing.py
